# acas-api

./: .coveragerc  .env.example  .env.staging  .gitignore  Dockerfile  Dockerfile.smoke  Dockerfile.smoke2  GITHUB_SETUP.md  Makefile  README.md  STAGING_DEPLOYMENT_CHECKLIST.md  _docker_e2e_test.ps1  _git_push.bat  alembic.ini  api_test_results_2026-06-24.md  artifact_docker_compose_fix_2026-07-16.md  artifact_industrial_evaluation_2026-07-16.md  audit_report_2026-06-24.md  bandit_report.json  check_db.py  check_patch.py  check_sqlite_tables.py  coverage_raw.txt  coverage_task_2026-06-27.md  create_db.py  create_db.sql  create_tables.sql  create_tables_raw_sql.py  create_tables_sqlite.py  debug_tables.py  docker-compose.staging.yml  docker-compose.yml  docker_build_progress_2026-07-15.md  dr_test.py  final_load_test_1000_report.html  final_load_test_1000_stats.csv  final_load_test_1000_stats_history.csv  final_load_test_report.html  final_load_test_stats.csv  final_load_test_stats_history.csv  (+43 more)
alembic/: env.py
artifacts/: P0_fixes_complete_2026-07-17.md
deploy/: alert-rules.yml  loki.yml  prometheus.staging.yml  prometheus.yml  promtail.yml
docs/: operations_manual.md  production_deployment.md  rollback_guide.md
scripts/: create_indexes.sql  disaster_recovery.sh  generate_api_docs.py  optimize_performance.py
src/: __init__.py
tests/: conftest.py  load_test.py  load_test_report.html  load_test_simple.py  locustfile_distributed.py  locustfile_final.py  locustfile_minimal.py  locustfile_minimal_perf.py  quick_staging_test.ps1  quick_staging_test.sh  run_staging_tests.py  test_api_key_auth.py  test_app_infra.py  test_auth.py  test_auth_coverage_final.py  test_auth_mass.py  test_auth_routes.py  test_auth_users_parametrized.py  test_benchmark.py  test_config.py  test_coverage_boost.py  test_coverage_final_push.py  test_coverage_push_80.py  test_critical_paths.py  (+27 more)
(+49 files in other folders)
